[project]
name = "data-insight-multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.7",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
]
